# home-os

./: .gitignore  README.md  docker-compose.yml  flake.nix
.github/workflows/: ocaml.yaml  rust.yaml
docs/: Developing.md
go/: Makefile  go.mod  go.sum  go.work  modd.conf
go/configurator/: factory.go  go.mod  go.sum  main  main.go  namespace.go  server.go  value.go
go/core/api/registrar/: registrar.go
go/core/cmd/: main.go
go/core/rpc/: metrics.go
go/metrics/: dev.Dockerfile  go.mod
go/metrics/core/api/: v1.go
go/metrics/core/api/registrar/: registrar_test.go
go/middleware/: logging.go
go/protocols/: .gitignore  Makefile  application.capnp  application.capnp.go  config.capnp  config.capnp.go  core.capnp  core.capnp.go  device.capnp  device.capnp.go  go.mod  go.sum  logger.capnp  logger.capnp.go  metrics.capnp  metrics.capnp.go  readwrite.capnp  readwrite.capnp.go  registrar.capnp  registrar.capnp.go  registration.capnp  registration.capnp.go  services.capnp  services.capnp.go
ocaml/: conductor-unix.opam  conductor.opam  dune-project  homesos_protocols.opam  registrar-unix.opam  registrar.opam
ocaml/conductor/: api.capnp  conductor.ml  db.ml  db_irmin.ml  db_memory.ml  db_memory.mli  dune  models.ml  pinger.ml  registrar.ml  service_resolver.ml  user.ml  user.mli
ocaml/conductor_test/: db.ml  db_irmin.ml  dune  test.ml
ocaml/homeos_protocols/: dune
protocols/: application.capnp  config.capnp  core.capnp  device.capnp  logger.capnp  metrics.capnp  readwrite.capnp  registrar.capnp  registration.capnp  services.capnp
python/: requirements.txt
python/debugger/: Capnp Debugger.ipynb
rust/: Cargo.toml  build.nix
rust/bonsai/: Cargo.toml  build.rs
rust/bonsai/libs/rpc_lib/: Cargo.toml  build.rs
rust/bonsai/libs/rpc_lib/src/: lib.rs
rust/bonsai/src/: client.rs  config.rs  main.rs
rust/pinger/: Cargo.toml
rust/pinger/libs/pinger_rpc/: Cargo.toml  build.rs  protocols
rust/pinger/libs/pinger_rpc/src/: lib.rs
rust/pinger/src/: callback.rs  client.rs  config.rs  main.rs  types.rs
rust/protocols_rs/: Cargo.toml  build.rs  protocols
rust/protocols_rs/src/protocols/: mod.rs
