(lang dune 2.8)
(name home-os)
(version 0.0.1)

(generate_opam_files true)

(source (github nickrobison/home-os))
(maintainers "Nick Robison <nick@nickrobison.com>")
(authors "Nick Robison <nick@nickrobison.com>")

(package
  (name homesos_protocols)
  (synopsis "Core HomeOS Capnp protocols")
  (depends
    capnp))

(package
  (name conductor)
  (synopsis "Core HomeOS conductor library")
  (depends
    (alcotest :with-test)
    (dune (> 1.5))
    capnp-rpc-lwt
    logs
    fmt
    irmin-git
    ppx_irmin
uuidm))


(package
  (name conductor-unix)
  (synopsis "HomeOS Conductor application")
  (depends
    cmdliner
    logs
    capnp-rpc-unix
    irmin-unix
    (alcotest :with-test)))
