(lang dune 2.8)
(name home-os)
(version 0.0.1)

(generate_opam_files true)

(source (github nickrobison/home-os))
(maintainers "Nick Robison <nick@nickrobison.com>")
(authors "Nick Robison <nick@nickrobison.com>")

(package
  (name homeos-protocols)
  (synopsis "Core HomeOS Capnp protocols")
  (depends
    capnp))

(package
  (name conductor)
  (synopsis "Core HomeOS conductor library")
  (depends
    (ocaml (>= 4.12))
    (homeos-protocols (= :version))
    (alcotest :with-test)
    (alcotest-lwt :with-test)
    dune
    (capnp-rpc-lwt (< 2.0))
    logs
    fmt
    irmin-git
    ppx_deriving
    ppx_import
    digestif
    uuidm))


(package
  (name conductor-unix)
  (synopsis "HomeOS Conductor application")
  (depends
    (conductor (= :version))
    cmdliner
    logs
    irmin-git
    (capnp-rpc-unix (< 2.0))
    (alcotest :with-test)))

