(library
 (name conductor)
 (ocamlc_flags :standard -w -55-53)
 (ocamlopt_flags :standard -w -55-53)
 (libraries
  capnp
  capnp-rpc-lwt
  logs
  lwt.unix
  homeos_protocols
  irmin
  uuidm
  ezjsonm
  digestif)
 (preprocess
  (staged_pps ppx_import ppx_deriving.eq ppx_deriving.ord ppx_deriving.show)))
