(library
 (name homeos_protocols)
 (public_name homeos-protocols)
 (ocamlc_flags :standard -w -55-53)
 (ocamlopt_flags :standard -w -55-53)
 (libraries capnp))

(rule
 (targets registration.ml registration.mli)
 (deps protocols/registration.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets registrar.ml registrar.mli)
 (deps protocols/registrar.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets services.ml services.mli)
 (deps ./protocols/services.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets metrics.ml metrics.mli)
 (deps ./protocols/metrics.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
