[package]
name = "bonsai"
version = "0.1.0"
authors = ["Nick Robison <nick@nickrobison.com>"]
edition = "2018"

[dependencies.protocols_rs]
path = "../protocols_rs"

[dependencies]
capnp = "0.13"
capnp-rpc = "0.13"
futures = "0.3.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.3"
log = "0.4.11"