[package]
name = "pinger"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.protocols_rs]
path = "../protocols_rs"

[dependencies]
capnp = "0.21.0"
capnp-rpc = "0.21.0"
logs = "0.7.1"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
#tokio = { version = "1.16.1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
futures = "0.3.31"
